# CreperieZinzin

./: .env  Cargo.toml  readme.md
.cargo/: config.toml
prisma/: schema.prisma
src/: main.rs
